Alignment fixes for breadcrumbs.

--- a/less/modules/breadcrumbs.less
+++ b/less/modules/breadcrumbs.less
@@ -1,5 +1,6 @@
 /* breadcrumbs */
 
+@breadcrumbs-sep:                       2022; // arrow: 203A, bull: 2022, pipe: 2502
 @breadcrumbs-sep-size:                  5px;
 
 @breadcrumbs-sep-color:                 fade(@black, 25%);
@@ -29,7 +30,7 @@
     &:not(.ui-breadcrumbs-no-sep) {
         & > ul {
             & > li {
-                &:not(:first-child):before { content: "\203A"; ._color-var(breadcrumbs-sep-color); font-size: @font-18; vertical-align: middle; line-height: 0; margin: 0 (@breadcrumbs-sep-size + 3) 0 (@breadcrumbs-sep-size - 2); display: inline-block; }
+                &:not(:first-child):before { content: "\@{breadcrumbs-sep}"; ._color-var(breadcrumbs-sep-color); font-size: @font-18; vertical-align: middle; line-height: 0; margin: 0 (@breadcrumbs-sep-size + 3) 0 (@breadcrumbs-sep-size - 2); display: inline-block; }
             }
         }
     }
